...
                  child: Padding(
                    padding: EdgeInsets.all(24),
                    child: Column(
                      mainAxisSize: MainAxisSize.min,
                      children: [
                        Text(
                          'Selecciona un dispositivo',
                          style: TextStyle(
                            color: AppColors.textDim,
                            fontSize: 15,
                          ),
                        ),
                        SizedBox(height: 8),
...
